# ci-playground

./: .release-please-config.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: checkpoint-migrations.yml  pr-release.yml  release-please.yml
src/test-package/migrations/: 123_test.py  456_test.py
