[project]
name = "test-package"
description = "A test package."
readme = "README.md"
requires-python = ">=3.10"
dynamic = [ "version" ]

[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=60", "setuptools-scm>=8" ]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools_scm]
version_file = "src/test-package/_version.py"